# nsync-cli

./: .gitignore  README.md  pyproject.toml
nsync_cli/: client.py  client_commands.py  config.py  glob.py  main.py
nsync_cli/queries/: file.py  login.py  user.py
